--- a/site.yml.sample
+++ b/site.yml.sample
@@ -166,6 +166,51 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
+- hosts: mons[0]
+  become: True
+  gather_facts: false
+  any_errors_fatal: true
+  tasks:
+    - import_role:
+        name: ceph-defaults
+
+    - name: set global config
+      ceph_config:
+        action: set
+        who: "global"
+        option: "{{ item.key }}"
+        value: "{{ item.value }}"
+      with_dict:
+        "{{ {
+           'public_network': public_network | default(False),
+           'cluster_network': cluster_network | default(False),
+           'osd pool default crush rule': osd_pool_default_crush_rule,
+           'ms bind ipv6': 'true' if ip_version == 'ipv6' else 'false',
+           'ms bind ipv4': 'false' if ip_version == 'ipv6' else 'true',
+           'osd crush chooseleaf type': '0' if common_single_host_mode | default(False) | bool else False,
+        } }}"
+      when:
+        - inventory_hostname == ansible_play_hosts_all | last
+        - item.value
+
+    - name: set global config overrides
+      ceph_config:
+        action: set
+        who: "global"
+        option: "{{ item.key }}"
+        value: "{{ item.value }}"
+      when: inventory_hostname == ansible_play_hosts_all | last
+      with_dict: "{{ ceph_conf_overrides['global'] }}"
+
+    - name: set osd_memory_target
+      ceph_config:
+        action: set
+        who: "osd.*/{{ item }}:host"
+        option: "osd_memory_target"
+        value: "{{ _osd_memory_target | default(osd_memory_target) }}"
+      when: inventory_hostname == ansible_play_hosts_all | last
+      loop: "{{ groups[osd_group_name] | default([]) }}"
+
 - hosts: osds
   gather_facts: false
   become: True
