cephadm-adopt: fix an issue in mgr adoption play
this drops variables in 'hosts' field of mgr adoption play.

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -594,7 +594,7 @@
         CEPHADM_IMAGE: '{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}'
 
 - name: adopt ceph mgr daemons
-  hosts: "{{ groups[mgr_group_name] | default(groups[mon_group_name]) }}"
+  hosts: "{{ groups['mgrs'] | default(groups['mons']) | default(omit) }}"
   serial: 1
   become: true
   gather_facts: false
