Speed up the some facts settings by running them once
Signed-off-by: Teoman ONAY <tonay@ibm.com>
(cherry picked from commit 72d4d207a0cc3b5ec5f8b4538b8e4bc9771bf451)

--- a/roles/ceph-facts/tasks/set_radosgw_address.yml
+++ b/roles/ceph-facts/tasks/set_radosgw_address.yml
@@ -51,6 +51,7 @@
       loop: "{{ groups.get(rgw_group_name, []) }}"
       delegate_to: "{{ item }}"
       delegate_facts: true
+      run_once: true
       when: ip_version == 'ipv4'
 
 
@@ -60,6 +61,7 @@
       loop: "{{ groups.get(rgw_group_name, []) }}"
       delegate_to: "{{ item }}"
       delegate_facts: true
+      run_once: true
       when: ip_version == 'ipv6'
 
 - name: set_fact rgw_instances without rgw multisite
