--- a/site.yml.sample
+++ b/site.yml.sample
@@ -46,7 +46,7 @@
           - '!ohai'
       delegate_to: "{{ item }}"
       delegate_facts: True
-      with_items: "{{ groups['all'] | difference(groups.get('clients', [])) }}"
+      with_items: "{{ ansible_play_hosts | difference(groups.get('clients', [])) }}"
       run_once: true
       when: delegate_facts_host | bool
 
