--- a/roles/ceph-common/tasks/installs/configure_redhat_repository_installation.yml
+++ b/roles/ceph-common/tasks/installs/configure_redhat_repository_installation.yml
@@ -17,8 +17,6 @@
 
 # Remove yum caches so yum doesn't get confused if we are reinstalling a different ceph version
 - name: purge yum cache
-  command: yum clean all
-  args:
-    warn: no
+  command: yum clean all #noqa: [303]
   changed_when: false
   when: ansible_facts['pkg_mgr'] == 'yum'
