--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -2,8 +2,8 @@
 pytest-testinfra
 pytest-xdist
 pytest
-ansible-core>=2.12,<2.13,!=2.9.10
-Jinja2>=2.10
+ansible-core<2.16
+Jinja2
 netaddr
 mock
 jmespath
