--- a/roles/ceph-validate/tasks/check_system.yml
+++ b/roles/ceph-validate/tasks/check_system.yml
@@ -6,8 +6,8 @@
 
 - name: fail on unsupported ansible version
   fail:
-    msg: "Ansible version must be 2.14!"
-  when: ansible_version.minor|int != 14
+    msg: "Ansible version must be either 2.15 or 2.16!"
+  when: ansible_version.minor|int not in [15, 16]
 
 - name: fail on unsupported system
   fail:
