--- a/roles/ceph-infra/tasks/configure_firewall.yml
+++ b/roles/ceph-infra/tasks/configure_firewall.yml
@@ -1,6 +1,6 @@
 ---
 - name: check firewalld installation on redhat or SUSE/openSUSE
-  command: rpm -q firewalld
+  command: rpm -q firewalld  # noqa [303]
   register: firewalld_pkg_query
   ignore_errors: true
   check_mode: no
