tests: add flake8 to tox.ini
this:
- adds flake8 to tox.ini
- addresses all flake8 errors

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = centos-{container,non_container}-{all_daemons,all_daemons_ipv6,colloca
   centos-non_container-{switch_to_containers}
   infra_lv_create
   migrate_ceph_disk_to_ceph_volume
+  flake8
 
 skipsdist = True
 
@@ -419,3 +420,21 @@ commands=
   cephadm_adopt: {[cephadm-adopt]commands}
 
   vagrant destroy --force
+
+[testenv:flake8]
+max-line-length = 100
+ignore =
+    E501,
+    W503,
+exclude =
+    .tox \
+    .vagrant \
+    __pycache__ \
+    *.pyc \
+    templates \
+    .eggs
+statistics = True
+deps =
+    flake8
+commands =
+    flake8 --max-line-length=160  ./library ./module_utils/ ./tests/library/ ./tests/module_utils/ ./tests/functional/tests/ {posargs}
