drop variables from 'hosts' key
The linter complains about that.
It doesn't work anyway so it doesn't make sense to leave these variables
here.

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/infrastructure-playbooks/shrink-mds.yml
+++ b/infrastructure-playbooks/shrink-mds.yml
@@ -24,7 +24,7 @@
         tasks_from: container_binary
 
 - name: perform checks, remove mds and print cluster health
-  hosts: "{{ groups[mon_group_name][0] }}"
+  hosts: mons[0]
   become: true
   vars_prompt:
     - name: ireallymeanit
