--- a/infrastructure-playbooks/shrink-mgr.yml
+++ b/infrastructure-playbooks/shrink-mgr.yml
@@ -21,7 +21,7 @@
         msg: gather facts on all Ceph hosts for following reference
 
 - name: confirm if user really meant to remove manager from the ceph cluster
-  hosts: "{{ groups[mon_group_name][0] }}"
+  hosts: mons[0]
   become: true
   vars_prompt:
     - name: ireallymeanit
