--- a/infrastructure-playbooks/shrink-osd.yml
+++ b/infrastructure-playbooks/shrink-osd.yml
@@ -14,8 +14,8 @@
 - name: gather facts and check the init system
 
   hosts:
-    - "{{ mon_group_name|default('mons') }}"
-    - "{{ osd_group_name|default('osds') }}"
+    - mons
+    - osds
 
   become: True
   tasks:
@@ -23,7 +23,7 @@
 
 - name: confirm whether user really meant to remove osd(s) from the cluster
 
-  hosts: "{{ groups[mon_group_name][0] }}"
+  hosts: mons[0]
 
   become: true
 
