--- a/infrastructure-playbooks/shrink-rbdmirror.yml
+++ b/infrastructure-playbooks/shrink-rbdmirror.yml
@@ -13,8 +13,8 @@
 
 - name: gather facts and check the init system
   hosts:
-    - "{{ mon_group_name|default('mons') }}"
-    - "{{ mon_group_name|default('rbdmirrors') }}"
+    - mons
+    - rbdmirrors
   become: true
   tasks:
     - debug:
@@ -22,7 +22,7 @@
 
 - name: confirm whether user really meant to remove rbd mirror from the ceph
         cluster
-  hosts: "{{ groups[mon_group_name][0] }}"
+  hosts: mons[0]
   become: true
   vars_prompt:
     - name: ireallymeanit
