--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9]
+        python-version: '3.10'
     name: Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v2
