tests: set ANSIBLE_COLLECTIONS_PATH for rbdmirror scenario
This is missing so the job fails.
Typical error:
```
ERROR! couldn't resolve module/action 'community.general.dnf_config_manager'.
```

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/tox-rbdmirror.ini
+++ b/tox-rbdmirror.ini
@@ -16,6 +16,7 @@ setenv=
   ANSIBLE_CALLBACK_WHITELIST = profile_tasks
   ANSIBLE_CACHE_PLUGIN = memory
   ANSIBLE_GATHERING = implicit
+  ANSIBLE_COLLECTIONS_PATH = {envdir}/ansible_collections
   # only available for ansible >= 2.5
   ANSIBLE_KEEP_REMOTE_FILES = 1
   ANSIBLE_STDOUT_CALLBACK = yaml
