update: update the osd require-osd-release to squid
This updates the `osd require-osd-release` call with `squid`
instead of `reef`.

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -1059,7 +1059,7 @@
         tasks_from: container_binary.yml
 
     - name: container | disallow pre-reef OSDs and enable all new reef-only functionality
-      command: "{{ container_binary }} exec ceph-mon-{{ hostvars[groups[mon_group_name][0]]['ansible_facts']['hostname'] }} ceph --cluster {{ cluster }} osd require-osd-release reef"
+      command: "{{ container_binary }} exec ceph-mon-{{ hostvars[groups[mon_group_name][0]]['ansible_facts']['hostname'] }} ceph --cluster {{ cluster }} osd require-osd-release squid"
       delegate_to: "{{ groups[mon_group_name][0] }}"
       run_once: True
       when:
@@ -1067,7 +1067,7 @@
         - groups.get(mon_group_name, []) | length > 0
 
     - name: non container | disallow pre-reef OSDs and enable all new reef-only functionality
-      command: "ceph --cluster {{ cluster }} osd require-osd-release reef"
+      command: "ceph --cluster {{ cluster }} osd require-osd-release squid"
       delegate_to: "{{ groups[mon_group_name][0] }}"
       run_once: True
       when:
