--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -133,8 +133,8 @@
 
         - name: check ceph release being deployed
           fail:
-            msg: "This version of ceph-ansible is intended for upgrading to Ceph Reef only."
-          when: "'reef' not in ceph_version.stdout.split()"
+            msg: "This version of ceph-ansible is intended for upgrading to Ceph Squid only."
+          when: "'squid' not in ceph_version.stdout.split()"
 
 
 - name: upgrade ceph mon cluster
