--- a/site.yml.sample
+++ b/site.yml.sample
@@ -174,11 +174,7 @@
       ansible.builtin.import_role:
         name: ceph-defaults
 
-    - name: Import config role
-      ansible.builtin.import_role:
-        name: ceph-config
-
-    - name: Set clsuter configs
+    - name: Set cluster configs
       ceph_config:
         action: set
         who: "{{ item.0.key }}"
